# bmstu-cpp-works

./: .gitignore  CMakeLists.txt  README.md  example_test.cpp  let1_tests.cpp
.github/workflows/: ci-cpp-style-check.yml
advanced_vector_hw/: CMakeLists.txt  adv_vector_testing.cpp  advanced_vector.h  raw_memory.h
dummy_list/: basic_list.h  list_testing.cpp
dummy_list_hw/: basic_list.h  list_testing.cpp
dummy_optional/: basic_optional.h  optional_testing.cpp
dummy_optional_hw/: basic_optional.h  optional_testing.cpp
dummy_string/: CMakeLists.txt  basic_string.cpp  basic_string.h  string_test.cpp  string_test.h
dummy_string_hw/: CMakeLists.txt  basic_string.h
dummy_vector/: array_bundle.h  vector_template.h  vector_test.cpp
dummy_vector_hw/: array_bundle.h  vector_template.h
foolish_set_hw/: CMakeLists.txt  foolish_set.h  search_tree.h  testing_set.cpp
let2-dec2oct/: dec2oct_test.cpp  fromdec2oct.h
let4-struct/: struct-to-XML.h  struct.h  xml_format_test.cpp
let5-JacquesFresco/: bruteforce.cpp  function.h
let6-database/: database.cpp  database.h
let7-palindrome/: palidrome_check.cpp
let8-JacquesFrescoV2/: password_generator.cpp
let_1/: let.cpp  let.h
second_work/: CMakeLists.txt  dec2oct_test.cpp  fromdec2oct.h
third_work/: CMakeLists.txt  struct-to-XML.cpp  struct-to-XML.h
